fix: vertically align sponsor logos

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -826,6 +826,7 @@ a:focus {
 }
 
 .sponsors-list {
+  align-items: center;
   display: flex;
   gap: 1.5rem;
   justify-content: center;
